<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.rana.azanreminder.Activities.MainActivity"
    android:scrollbars="horizontal">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/city"
                    android:id="@+id/cityLabel"
                    android:textSize="40sp"
                    android:layout_weight="1"
                    style="@style/AppTheme" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/cityName"
                    android:textSize="50sp"
                    android:layout_weight="1"
                    style="@style/AppTheme"
                    android:gravity="left" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextClock
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textClock"
                    android:textSize="40sp"
                    android:textAlignment="center" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start"
                    android:id="@+id/button"
                    android:textSize="20sp"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/pressure"
                    android:id="@+id/pressure"
                    android:layout_weight="1"
                    android:textSize="40sp"
                    style="@style/AppTheme" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/pressureValue"
                    android:layout_weight="1"
                    android:textSize="40sp"
                    style="@style/AppTheme" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/temperature"
                    android:id="@+id/temperature"
                    android:layout_weight="1"
                    android:textSize="40sp"
                    style="@style/AppTheme"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/temperatureValue"
                    android:layout_weight="1"
                    android:textSize="40sp"
                    style="@style/AppTheme"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/fajr"
                    android:id="@+id/fajr"
                    android:textSize="40sp"
                    style="@style/AppTheme"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/fajrTime"
                    android:textSize="40sp"
                    style="@style/AppTheme"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/johor"
                    android:id="@+id/johor"
                    android:layout_weight="1"
                    android:textSize="40sp"
                    style="@style/AppTheme" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/johorTime"
                    android:layout_weight="1"
                    android:textSize="40sp"
                    style="@style/AppTheme" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/asor"
                    android:id="@+id/asor"
                    android:layout_weight="1"
                    android:textSize="40sp"
                    style="@style/AppTheme" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/asorTime"
                    android:layout_weight="1"
                    android:textSize="40sp"
                    style="@style/AppTheme" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/magrib"
                    android:id="@+id/magrib"
                    android:layout_weight="1"
                    android:textSize="40sp"
                    style="@style/AppTheme" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/magribTime"
                    android:layout_weight="1"
                    android:textSize="40sp"
                    style="@style/AppTheme" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/isha"
                    android:id="@+id/isha"
                    android:layout_weight="1"
                    android:textSize="40sp"
                    style="@style/AppTheme" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/ishaTime"
                    android:layout_weight="1"
                    android:textSize="40sp"
                    style="@style/AppTheme" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/timeleftfajr"
                android:layout_weight="1"
                android:textSize="40sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/timeleftjohor"
                android:layout_weight="1"
                android:textSize="40sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/timeleftasor"
                android:layout_weight="1"
                android:textSize="40sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/timeleftmagrib"
                android:layout_weight="1"
                android:textSize="40sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/timeleftisha"
                android:layout_weight="1"
                android:textSize="40sp" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>
